# minhas_tarefas_sync

./: pyproject.toml
migrations/: env.py
migrations/versions/: 4731c4c5147b_create_users_table.py
minhas_tarefas/: app.py  database.py  models.py  schemas.py
static/css/: main_style.css
templates/: bootstrap.html  index.html  index_flask.html
tests/: conftest.py  test_app.py  test_db.py
